Don't wrap title (fixes #19489)

--- a/src/vs/workbench/parts/welcome/page/electron-browser/welcomePage.css
+++ b/src/vs/workbench/parts/welcome/page/electron-browser/welcomePage.css
@@ -74,6 +74,7 @@
 	font-weight: normal;
 	color: rgba(0,0,0,.8);
 	font-size: 3.6em;
+	white-space: nowrap;
 }
 
 .vs-dark .monaco-workbench > .part.editor > .content .welcomePage h1 {
